--- a/api/build.gradle
+++ b/api/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok' // 어노테이션 사용하기 때문
     implementation 'org.springframework.boot:spring-boot-starter-web' // starter-web과 test는 세트
+    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.5.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
